added diamond css

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body:before {
   content: '';
   position: absolute;
   left: 12%;
-  border-left: 1px solid #EEA1BE;
+  border-left: 10px solid #EEA1BE;
   height: 100vh;
   top: 0;
 }
@@ -33,16 +33,19 @@ body:before {
   pointer-events: none;
   position: relative;
   color: #F3F2F4;
+  text-shadow: 5px 5px 0px #4210E7, 7px 7px 0px #4210E7;
 }
 
 .title:before {
   content: '';
   position: absolute;
-  width: 10%;
-  height: 3px;
+  width: 150px;
+  height: 150px;
   background: #EEA1BE;
-  left: -15%;
+  left: 50%;
   top: 15%;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .title .title-2, .title .title-3 {
@@ -55,6 +58,7 @@ p {
   font-size: 1.5rem;
   margin-top: 2em;
   color: #F3F2F4;
+  text-shadow: 5px 5px 0px #4210E7, 7px 7px 0px #4210E7;
   font-style: italic;
 }
 
@@ -104,5 +108,20 @@ p {
 
 .img:hover {
   opacity: .5;
+}
+
+@media (max-width: 968px) {
+  .container {
+    margin: 0 auto;
+    padding: 0 15px;
+    z-index: 999;
+  }
+  .container .title {
+    font-size: 5rem;
+    line-height: 2.5rem;
+  }
+  .cursor {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
